k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: iooding-service
  namespace: iooding
spec:
  selector: { app: iooding-blog }
  ports: [{ port: 80, targetPort: 8000 }]

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iooding-blog
  namespace: iooding
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy: { type: Recreate }
  selector:
    matchLabels: { app: iooding-blog }
  template:
    metadata:
      labels: { app: iooding-blog }
    spec:
      nodeSelector: { "infra.iooding.local/storage": "true" }
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: infra.iooding.local/worker
                    operator: In
                    values:
                      - "true"
      terminationGracePeriodSeconds: 10
      tolerations:
        - { key: "node.kubernetes.io/not-ready", operator: "Exists", effect: "NoExecute", tolerationSeconds: 10 }
        - { key: "node.kubernetes.io/unreachable", operator: "Exists", effect: "NoExecute", tolerationSeconds: 10 }
      securityContext: { runAsNonRoot: true, runAsUser: 100, fsGroup: 100 }
      containers:
        - name: iooding
          image: viktor2003/iooding:v114
          ports: [{ containerPort: 8000 }]
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 256Mi
          volumeMounts:
            - { name: media-storage, mountPath: /app/media }
            - { name: tmp-volume, mountPath: /tmp }
          startupProbe:
            httpGet: { path: /health/live/, port: 8000 }
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /health/live/, port: 8000 }
            periodSeconds: 10
          readinessProbe:
            httpGet: { path: /health/, port: 8000 }
            periodSeconds: 5
      volumes:
        - name: media-storage
          persistentVolumeClaim: { claimName: media-pvc }
        - name: tmp-volume
          emptyDir: { medium: Memory, sizeLimit: 128Mi }
