k8s/lm-studio.yaml
apiVersion: v1
kind: Service
metadata:
  name: lm-studio
  namespace: iooding
spec:
  ports:
    - protocol: TCP
      port: 1234
      targetPort: 1234

---
apiVersion: v1
kind: Endpoints
metadata:
  name: lm-studio
  namespace: iooding
subsets:
  - addresses:
      - ip: 192.168.64.1 # UTM Bridge IP for Mac Host
    ports:
      - port: 1234
